// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOIList renders with dois 1`] = `
<DocumentFragment>
  <div
    class="__InlineList__"
    data-testid="inline-data-list"
  >
    <span
      class=""
    >
      DOI: 
    </span>
    <ul>
      <li>
        <span>
          <a
            href="//doi.org/12.1234/1234567890123_1234"
            target="_blank"
          >
            12.1234/1234567890123_1234
          </a>
        </span>
        , 
      </li>
      <li>
        <span>
          <a
            href="//doi.org/99.9999/9999999999999_9999"
            target="_blank"
          >
            99.9999/9999999999999_9999
          </a>
          <span>
             (erratum)
          </span>
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`DOIList renders with dois and showLabel as false 1`] = `
<DocumentFragment>
  <div
    class="__InlineList__"
    data-testid="inline-data-list"
  >
    <ul>
      <li>
        <span>
          <a
            href="//doi.org/12.1234/1234567890123_1234"
            target="_blank"
          >
            12.1234/1234567890123_1234
          </a>
        </span>
        , 
      </li>
      <li>
        <span>
          <a
            href="//doi.org/99.9999/9999999999999_9999"
            target="_blank"
          >
            99.9999/9999999999999_9999
          </a>
          <span>
             (erratum)
          </span>
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`DOIList renders with dois and showLabel as true 1`] = `
<DocumentFragment>
  <div
    class="__InlineList__"
    data-testid="inline-data-list"
  >
    <span
      class=""
    >
      DOI: 
    </span>
    <ul>
      <li>
        <span>
          <a
            href="//doi.org/12.1234/1234567890123_1234"
            target="_blank"
          >
            12.1234/1234567890123_1234
          </a>
        </span>
        , 
      </li>
      <li>
        <span>
          <a
            href="//doi.org/99.9999/9999999999999_9999"
            target="_blank"
          >
            99.9999/9999999999999_9999
          </a>
          <span>
             (erratum)
          </span>
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
